Git_WGBH_QC/src/objects/Relationships__c.object
<CustomObject>
    <description>Junction object between Organization(Account) and People(Contact)</description>
    <fields>
        <fullName>Account_Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Household__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Account Relationship includes relationship with an individual(Person Account) or the Organization(Business Account)</description>
        <label>Account Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>People__c</fullName>
        <label>People</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Rel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reciprocal_Relationship__c</fullName>
        <label>Reciprocal Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Adviser to Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant to Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt to Nephew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt to Niece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boss to Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker to Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother-in-Law to Brother-in-Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother to Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother to Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairperson to Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child to Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classmate to Classmate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client to Adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client to Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague to Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee Member to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee to Chairperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact to Individual Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin to Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter to Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter to Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor to Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee to Boss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive to Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father to Daughter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Relationship__c</fullName>
        <label>Related Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To_AccHousehold__c</fullName>
        <label>Related To Account for the Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Related To Household)</relationshipLabel>
        <relationshipName>Relationships3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To_Age__c</fullName>
        <formula>Related_To_People__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_To_Household__c</fullName>
        <label>Related To Household</label>
        <referenceTo>Household__c</referenceTo>
        <relationshipLabel>Relationships (Related To Household)</relationshipLabel>
        <relationshipName>RelatedRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To_Organization__c</fullName>
        <label>Related To Account for the Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Related To Organization)</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To_People__c</fullName>
        <label>Related To People</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships (Related To People)</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Category__c</fullName>
        <label>Relationship Category</label>
        <picklist>
            <picklistValues>
                <fullName>Family Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Peer Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships between Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee/Company Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friendship Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member/Organization Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive/Company Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giving Circle Relationships</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_To__c</fullName>
        <formula>IF(Related_To_People__c != null, HYPERLINK(&quot;/&quot;+Related_To_People__c,Related_To_People__r.FirstName +&apos; &apos;+ Related_To_People__r.LastName,&quot; _self&quot;),
IF(Related_To_Organization__c != null, HYPERLINK(&quot;/&quot;+Related_To_Organization__c,Related_To_Organization__r.Name,&quot; _self&quot;),
IF(Related_To_AccHousehold__c != null, HYPERLINK(&quot;/&quot;+Related_To_AccHousehold__c ,Related_To_AccHousehold__r.Name,&quot; _self&quot;),
HYPERLINK(&quot;/&quot;+User__c,User__r.FirstName +&apos; &apos;+ User__r.LastName,&quot; _self&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Primary Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Acquaintance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classmate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee - Former</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer - Former</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family - Aunt/Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family - Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family - Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family - Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family - Sibling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family - Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraternity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister-in-Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother-in-Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter-in-law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son-in-law</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <picklist>
            <picklistValues>
                <fullName>Undefined</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weak</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_relationship_id__c</fullName>
        <description>TA Relationship Id</description>
        <externalId>true</externalId>
        <inlineHelpText>TA Relationship Id</inlineHelpText>
        <label>TA Relationship Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>Relationship with the user in the salesforce.com</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Relationships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isReciprocal__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If you check this box upon entering that a husband is related to a wife the reciprocal relationship will show on the wife (this is on the contact level only)</inlineHelpText>
        <label>Is Reciprocal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>relationship_category_value__c</fullName>
        <description>Relationship Category</description>
        <inlineHelpText>Relationship Category</inlineHelpText>
        <label>Relationship Category</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship_type__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advisor to Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant to Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt to Nephew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt to Niece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boss to Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker to Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother-in-Law to Brother-in-Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother to Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother to Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairperson to Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child to Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classmate to Classmate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client to Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client to Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club to Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague to Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee Member to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee to Chairperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization to Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin to Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter to Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter to Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor to Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed. Institution to Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Alumni to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee to Boss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee to Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>relationship_type_value__c</fullName>
        <description>Relationship Type</description>
        <inlineHelpText>Relationship Type</inlineHelpText>
        <label>Relationship Type Value</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reverse_relationship_type__c</fullName>
        <label>Reverse Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advisor to Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant to Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt to Nephew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt to Niece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boss to Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker to Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother-in-Law to Brother-in-Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother to Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother to Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairperson to Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child to Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classmate to Classmate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client to Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client to Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague to Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee Member to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee to Chairperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin to Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter to Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter to Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor to Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed. Institution to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee to Boss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee to Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive to Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father to Daughter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>reverse_relationship_type_value__c</fullName>
        <description>Reverse Relationship Type Value</description>
        <inlineHelpText>Reverse Relationship Type Value</inlineHelpText>
        <label>Reverse Relationship Type Value</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REL- {0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <recordTypes>
        <fullName>Person_record_to_Account_Record</fullName>
        <active>true</active>
        <description>Relationship between a person and an account (household, organization, foundation)</description>
        <label>People to Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_record_to_Organization_Record</fullName>
        <active>true</active>
        <description>Relationship between a person and organization</description>
        <label>People to Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_record_to_Person_Record</fullName>
        <active>true</active>
        <description>Individiual Relationship</description>
        <label>People to People</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_record_to_User_Record</fullName>
        <active>true</active>
        <description>Contact relationship to an employee</description>
        <label>People to User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>